<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/music_background"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.example.mohamed.musicalapp.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00000000"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/home"
            android:textColor="#FAFAFA"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#00000000"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:id="@+id/albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/albums"
                android:textColor="#FAFAFA"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/songs"
                android:textColor="#FAFAFA"
                android:textSize="18dp"
                android:textStyle="bold|italic">
            </TextView>

        </LinearLayout>

        <View
            android:layout_width="350dp"
            android:layout_height="7dp"
            android:background="#FFFFFF"
            android:paddingLeft="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/Explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_from"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="italic|bold" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:padding="10dp" />

</RelativeLayout>
