<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/albums"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/albums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/albums"
                android:textColor="#FAFAFA"
                android:textSize="17sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/songs"
                android:textColor="#FAFAFA"
                android:textSize="17sp"
                android:textStyle="bold|italic"

                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="7dp"
        android:background="#FFFFFF"
        android:paddingLeft="20dp"></View>

    <ListView
        android:id="@+id/album_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_weight="5"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/play"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:padding="10dp"

        />

</LinearLayout>
